--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "json-2-csv": "^3.11.1"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "webpack": "^5.37.0"
+    "jest": "^26.6.3"
   }
 }
